# Okapia

3rd/argon2/: Android.mk  Application.mk  README.txt
app/: build.gradle
app/app/: CMakeLists.txt  build.gradle
app/app/src/main/: AndroidManifest.xml
app/app/src/main/cpp/: argon2api.h  encryption.cpp  native-lib.cpp
app/app/src/main/java/com/riguz/okapia/: LoginActivity.java  MainActivity.java
app/app/src/main/java/com/riguz/okapia/encrypt/: Argon2.java  Hex.java
app/app/src/main/res/layout/: activity_login.xml
app/app/src/test/java/com/riguz/okapia/: ExampleUnitTest.java
app/gradle/wrapper/: gradle-wrapper.properties
app/src/androidTest/java/com/riguz/okapia/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/riguz/okapia/: MainActivity.java  SplashActivity.java  UnlockActivity.java
app/src/main/java/com/riguz/okapia/model/: SecretItem.java
app/src/main/java/com/riguz/okapia/ui/: ItemAdapter.java
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  activity_unlock.xml  layout_item.xml
app/src/main/res/layout-land/: activity_splash.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
